--- a/mail/src/main/resources/META-INF/resources/index.html
+++ b/mail/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>mailer - 1.0.0-SNAPSHOT</title>
+        <title>code-with-quarkus - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -236,9 +236,9 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>org.acme</code></li>
-                                <li>ArtifactId: <code>mailer</code></li>
+                                <li>ArtifactId: <code>code-with-quarkus</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                                <li>Quarkus Version: <code>2.14.2.Final</code></li>
+                                <li>Quarkus Version: <code>2.14.1.Final</code></li>
                             </ul>
                         </div>
                     </div>
